[gd_scene load_steps=11 format=2]

[ext_resource path="res://data/menu/menu.png" type="Texture" id=1]
[ext_resource path="res://data/scenes/NewButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://data/scripts/StartGame.gd" type="Script" id=3]
[ext_resource path="res://data/menu/exit.png" type="Texture" id=4]
[ext_resource path="res://data/menu/play.png" type="Texture" id=5]
[ext_resource path="res://data/menu/options.png" type="Texture" id=6]
[ext_resource path="res://data/menu/vsComputer.png" type="Texture" id=7]
[ext_resource path="res://data/audio/Star Commander1.wav" type="AudioStream" id=8]
[ext_resource path="res://data/audio/Menu Select.wav" type="AudioStream" id=9]
[ext_resource path="res://data/menu/titleE.png" type="Texture" id=10]

[node name="StartGame" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 3.05176e-05
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 640.0
margin_bottom = 360.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="VBoxContainer" parent="."]
margin_left = 49.0
margin_top = 116.0
margin_right = 217.0
margin_bottom = 256.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Menu"]
margin_right = 168.0
margin_bottom = 140.0
size_flags_vertical = 3
alignment = 1

[node name="Buttons" type="VBoxContainer" parent="Menu/HBoxContainer"]
margin_right = 168.0
margin_bottom = 140.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 15
alignment = 1

[node name="StartButton" parent="Menu/HBoxContainer/Buttons" instance=ExtResource( 2 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 7.0
margin_right = 168.0
margin_bottom = 27.0

[node name="TextureRect" parent="Menu/HBoxContainer/Buttons/StartButton" index="0"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -23.5
margin_top = -8.5
margin_right = 23.5
margin_bottom = 8.5
texture = ExtResource( 5 )

[node name="Settings" parent="Menu/HBoxContainer/Buttons" instance=ExtResource( 2 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 42.0
margin_right = 168.0
margin_bottom = 62.0

[node name="TextureRect" parent="Menu/HBoxContainer/Buttons/Settings" index="0"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -38.5
margin_top = -8.5
margin_right = 38.5
margin_bottom = 8.5
texture = ExtResource( 6 )

[node name="Tutorial" parent="Menu/HBoxContainer/Buttons" instance=ExtResource( 2 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 77.0
margin_right = 168.0
margin_bottom = 97.0

[node name="TextureRect" parent="Menu/HBoxContainer/Buttons/Tutorial" index="0"]
margin_left = 20.0
margin_right = 145.0
texture = ExtResource( 7 )

[node name="Exit" parent="Menu/HBoxContainer/Buttons" instance=ExtResource( 2 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 112.0
margin_right = 168.0
margin_bottom = 132.0

[node name="TextureRect" parent="Menu/HBoxContainer/Buttons/Exit" index="0"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.5
margin_top = -8.5
margin_right = 20.5
margin_bottom = 8.5
texture = ExtResource( 4 )

[node name="StartGameAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -20.0
autoplay = true

[node name="ButtonAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -20.0

[node name="title" type="TextureRect" parent="."]
margin_left = 180.0
margin_top = 30.0
margin_right = 472.0
margin_bottom = 82.0
texture = ExtResource( 10 )
[connection signal="button_down" from="Menu/HBoxContainer/Buttons/StartButton" to="." method="_on_StartButton_button_down"]
[connection signal="button_up" from="Menu/HBoxContainer/Buttons/StartButton" to="." method="_on_StartButton_button_up"]
[connection signal="mouse_entered" from="Menu/HBoxContainer/Buttons/StartButton" to="." method="_on_StartButton_mouse_entered"]
[connection signal="mouse_exited" from="Menu/HBoxContainer/Buttons/StartButton" to="." method="_on_StartButton_mouse_exited"]
[connection signal="pressed" from="Menu/HBoxContainer/Buttons/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="button_down" from="Menu/HBoxContainer/Buttons/Settings" to="." method="_on_Settings_button_down"]
[connection signal="button_up" from="Menu/HBoxContainer/Buttons/Settings" to="." method="_on_Settings_button_up"]
[connection signal="mouse_entered" from="Menu/HBoxContainer/Buttons/Settings" to="." method="_on_Settings_mouse_entered"]
[connection signal="mouse_exited" from="Menu/HBoxContainer/Buttons/Settings" to="." method="_on_Settings_mouse_exited"]
[connection signal="pressed" from="Menu/HBoxContainer/Buttons/Settings" to="." method="_on_Settings_pressed"]
[connection signal="button_down" from="Menu/HBoxContainer/Buttons/Tutorial" to="." method="_on_Tutorial_button_down"]
[connection signal="mouse_entered" from="Menu/HBoxContainer/Buttons/Tutorial" to="." method="_on_Tutorial_mouse_entered"]
[connection signal="mouse_exited" from="Menu/HBoxContainer/Buttons/Tutorial" to="." method="_on_Tutorial_mouse_exited"]
[connection signal="pressed" from="Menu/HBoxContainer/Buttons/Tutorial" to="." method="_on_Tutorial_pressed"]
[connection signal="button_down" from="Menu/HBoxContainer/Buttons/Exit" to="." method="_on_Exit_button_down"]
[connection signal="mouse_entered" from="Menu/HBoxContainer/Buttons/Exit" to="." method="_on_Exit_mouse_entered"]
[connection signal="mouse_exited" from="Menu/HBoxContainer/Buttons/Exit" to="." method="_on_Exit_mouse_exited"]
[connection signal="pressed" from="Menu/HBoxContainer/Buttons/Exit" to="." method="_on_Exit_pressed"]

[editable path="Menu/HBoxContainer/Buttons/StartButton"]

[editable path="Menu/HBoxContainer/Buttons/Settings"]

[editable path="Menu/HBoxContainer/Buttons/Tutorial"]

[editable path="Menu/HBoxContainer/Buttons/Exit"]
